fixes dark mode for profile actions in subscription tickets

--- a/src/css/betterttv-dark.css
+++ b/src/css/betterttv-dark.css
@@ -930,6 +930,10 @@ body {
     border: none !important;
 }
 
+.profile-actions .balloon {
+    color: #9c9c9c;
+}
+
 .panel-formatting .panel {
     color: #999;
 }
